--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -264,15 +264,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -1054,81 +1045,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ultralytics.engine.results.Results object with attributes:\n",
-       " \n",
-       " boxes: ultralytics.engine.results.Boxes object\n",
-       " keypoints: None\n",
-       " masks: None\n",
-       " names: {0: 'person', 1: 'bicycle', 2: 'car', 3: 'motorcycle', 4: 'airplane', 5: 'bus', 6: 'train', 7: 'truck', 8: 'boat', 9: 'traffic light', 10: 'fire hydrant', 11: 'stop sign', 12: 'parking meter', 13: 'bench', 14: 'bird', 15: 'cat', 16: 'dog', 17: 'horse', 18: 'sheep', 19: 'cow', 20: 'elephant', 21: 'bear', 22: 'zebra', 23: 'giraffe', 24: 'backpack', 25: 'umbrella', 26: 'handbag', 27: 'tie', 28: 'suitcase', 29: 'frisbee', 30: 'skis', 31: 'snowboard', 32: 'sports ball', 33: 'kite', 34: 'baseball bat', 35: 'baseball glove', 36: 'skateboard', 37: 'surfboard', 38: 'tennis racket', 39: 'bottle', 40: 'wine glass', 41: 'cup', 42: 'fork', 43: 'knife', 44: 'spoon', 45: 'bowl', 46: 'banana', 47: 'apple', 48: 'sandwich', 49: 'orange', 50: 'broccoli', 51: 'carrot', 52: 'hot dog', 53: 'pizza', 54: 'donut', 55: 'cake', 56: 'chair', 57: 'couch', 58: 'potted plant', 59: 'bed', 60: 'dining table', 61: 'toilet', 62: 'tv', 63: 'laptop', 64: 'mouse', 65: 'remote', 66: 'keyboard', 67: 'cell phone', 68: 'microwave', 69: 'oven', 70: 'toaster', 71: 'sink', 72: 'refrigerator', 73: 'book', 74: 'clock', 75: 'vase', 76: 'scissors', 77: 'teddy bear', 78: 'hair drier', 79: 'toothbrush'}\n",
-       " orig_img: array([[[252, 255, 251],\n",
-       "         [252, 255, 251],\n",
-       "         [252, 255, 251],\n",
-       "         ...,\n",
-       "         [ 39,  47,  37],\n",
-       "         [ 41,  49,  39],\n",
-       "         [ 42,  50,  40]],\n",
-       " \n",
-       "        [[252, 255, 251],\n",
-       "         [252, 255, 251],\n",
-       "         [252, 255, 251],\n",
-       "         ...,\n",
-       "         [ 37,  45,  35],\n",
-       "         [ 38,  46,  36],\n",
-       "         [ 39,  47,  37]],\n",
-       " \n",
-       "        [[252, 255, 253],\n",
-       "         [252, 255, 253],\n",
-       "         [252, 255, 253],\n",
-       "         ...,\n",
-       "         [ 38,  46,  36],\n",
-       "         [ 38,  46,  36],\n",
-       "         [ 39,  47,  37]],\n",
-       " \n",
-       "        ...,\n",
-       " \n",
-       "        [[  6,  11,  14],\n",
-       "         [  5,  10,  13],\n",
-       "         [  3,   8,  11],\n",
-       "         ...,\n",
-       "         [ 33,  45,  49],\n",
-       "         [ 33,  45,  49],\n",
-       "         [ 33,  45,  49]],\n",
-       " \n",
-       "        [[  2,   7,  10],\n",
-       "         [  1,   6,   9],\n",
-       "         [  1,   6,   9],\n",
-       "         ...,\n",
-       "         [ 30,  42,  46],\n",
-       "         [ 30,  42,  46],\n",
-       "         [ 30,  42,  46]],\n",
-       " \n",
-       "        [[  5,  10,  13],\n",
-       "         [  5,  10,  13],\n",
-       "         [  6,  11,  14],\n",
-       "         ...,\n",
-       "         [ 29,  41,  45],\n",
-       "         [ 29,  41,  45],\n",
-       "         [ 29,  41,  45]]], dtype=uint8)\n",
-       " orig_shape: (720, 1280)\n",
-       " path: '/home/ubuntu/project/ESE546_final_project/frames_v2/01c71072-718028b8-0000002.jpg'\n",
-       " probs: None\n",
-       " save_dir: None\n",
-       " speed: {'preprocess': 1.3422966003417969, 'inference': 8.376836776733398, 'postprocess': 1.4963150024414062}]"
+       "{0: 'person',\n",
+       " 1: 'bicycle',\n",
+       " 2: 'car',\n",
+       " 3: 'motorcycle',\n",
+       " 4: 'airplane',\n",
+       " 5: 'bus',\n",
+       " 6: 'train',\n",
+       " 7: 'truck',\n",
+       " 8: 'boat',\n",
+       " 9: 'traffic light',\n",
+       " 10: 'fire hydrant',\n",
+       " 11: 'stop sign',\n",
+       " 12: 'parking meter',\n",
+       " 13: 'bench',\n",
+       " 14: 'bird',\n",
+       " 15: 'cat',\n",
+       " 16: 'dog',\n",
+       " 17: 'horse',\n",
+       " 18: 'sheep',\n",
+       " 19: 'cow',\n",
+       " 20: 'elephant',\n",
+       " 21: 'bear',\n",
+       " 22: 'zebra',\n",
+       " 23: 'giraffe',\n",
+       " 24: 'backpack',\n",
+       " 25: 'umbrella',\n",
+       " 26: 'handbag',\n",
+       " 27: 'tie',\n",
+       " 28: 'suitcase',\n",
+       " 29: 'frisbee',\n",
+       " 30: 'skis',\n",
+       " 31: 'snowboard',\n",
+       " 32: 'sports ball',\n",
+       " 33: 'kite',\n",
+       " 34: 'baseball bat',\n",
+       " 35: 'baseball glove',\n",
+       " 36: 'skateboard',\n",
+       " 37: 'surfboard',\n",
+       " 38: 'tennis racket',\n",
+       " 39: 'bottle',\n",
+       " 40: 'wine glass',\n",
+       " 41: 'cup',\n",
+       " 42: 'fork',\n",
+       " 43: 'knife',\n",
+       " 44: 'spoon',\n",
+       " 45: 'bowl',\n",
+       " 46: 'banana',\n",
+       " 47: 'apple',\n",
+       " 48: 'sandwich',\n",
+       " 49: 'orange',\n",
+       " 50: 'broccoli',\n",
+       " 51: 'carrot',\n",
+       " 52: 'hot dog',\n",
+       " 53: 'pizza',\n",
+       " 54: 'donut',\n",
+       " 55: 'cake',\n",
+       " 56: 'chair',\n",
+       " 57: 'couch',\n",
+       " 58: 'potted plant',\n",
+       " 59: 'bed',\n",
+       " 60: 'dining table',\n",
+       " 61: 'toilet',\n",
+       " 62: 'tv',\n",
+       " 63: 'laptop',\n",
+       " 64: 'mouse',\n",
+       " 65: 'remote',\n",
+       " 66: 'keyboard',\n",
+       " 67: 'cell phone',\n",
+       " 68: 'microwave',\n",
+       " 69: 'oven',\n",
+       " 70: 'toaster',\n",
+       " 71: 'sink',\n",
+       " 72: 'refrigerator',\n",
+       " 73: 'book',\n",
+       " 74: 'clock',\n",
+       " 75: 'vase',\n",
+       " 76: 'scissors',\n",
+       " 77: 'teddy bear',\n",
+       " 78: 'hair drier',\n",
+       " 79: 'toothbrush'}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results"
+    "results[0].names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filtering for lables of interest:\n",
+    "\n",
+    "# define labels \n",
+    "labels = list(df_cleaned['category'].unique())\n",
+    "\n",
+    "integer_labels = []\n",
+    "labels_from_dict = []\n",
+    "\n",
+    "for key, val in results[0].names.items():\n",
+    "    if val in labels:\n",
+    "        integer_labels.append(key)\n",
+    "        labels_from_dict.append(val)\n",
+    "\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 6, 7]\n",
+      "\n",
+      "['bicycle', 'car', 'motorcycle', 'bus', 'train', 'truck']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(integer_labels)\n",
+    "print()\n",
+    "print(labels_from_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['car',\n",
+       " 'pedestrian',\n",
+       " 'truck',\n",
+       " 'motorcycle',\n",
+       " 'rider',\n",
+       " 'bicycle',\n",
+       " 'bus',\n",
+       " 'other vehicle',\n",
+       " 'other person',\n",
+       " 'train',\n",
+       " 'trailer']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
    ]
   },
   {
@@ -1223,6 +1308,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3998/3797210144.py:10: DtypeWarning: Columns (5,6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_cleaned = pd.read_csv('df_cleaned.csv')\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = YOLO(f'{HOME}/yolov8n.pt')\n",
+    "\n",
+    "# list of videos to test it on --> try it on one entire video\n",
+    "vid = test_vids['video_name'][0]\n",
+    "# define path\n",
+    "path = 'frames_v2/'\n",
+    "\n",
+    "\n",
+    "# load in dataframe\n",
+    "df_cleaned = pd.read_csv('df_cleaned.csv')\n",
+    "df_cleaned.dropna(inplace=True)\n",
+    "\n",
+    "# define labels \n",
+    "labels = list(df_cleaned['category'].unique())\n",
+    "\n",
+    "# load in list of test videos\n",
+    "test_vids = pd.read_csv('test_videos_small.csv', header=None)\n",
+    "test_vids.drop(columns=[0], inplace=True)\n",
+    "test_vids.rename(columns={1:'video_name'}, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -1256,26 +1377,6 @@
    ],
    "source": [
     "resulting_imgs, results = yolo_videoPredict(path, vid, df_cleaned, model, classes=labels, conf=0.25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'002d290d-89f4e5c0'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vid"
    ]
   },
   {
