detr with model saving

--- a/detr.ipynb
+++ b/detr.ipynb
@@ -32,6 +32,7 @@
     "import time\n",
     "import random\n",
     "from tqdm import tqdm\n",
+    "import pickle\n",
     "\n",
     "\n",
     "#Torch\n",
@@ -93,6 +94,34 @@
     "# import torch\n",
     "# torch.backends.cudnn.enabled = True\n",
     "# torch.backends.cudnn.benchmark = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', 'd']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pickle saving example\n",
+    "names = ['a', 'b', 'c', 'd']\n",
+    "with open('testlist', 'wb') as fp:\n",
+    "    pickle.dump(names, fp)\n",
+    "    \n",
+    "with open ('testlist', 'rb') as fp:\n",
+    "    itemlist = pickle.load(fp)\n",
+    "    \n",
+    "itemlist"
    ]
   },
   {
@@ -1132,6 +1161,8 @@
     "\n",
     "    summary_loss = AverageMeter()\n",
     "    loss_per_batch = []\n",
+    "    \n",
+    "    num_batches = len(data_loader)\n",
     "\n",
     "    tk0 = tqdm(data_loader, total=len(data_loader))\n",
     "\n",
@@ -1158,6 +1189,11 @@
     "        summary_loss.update(losses.item(),BATCH_SIZE)\n",
     "        loss_per_batch.append(summary_loss.avg)\n",
     "        tk0.set_postfix(loss=summary_loss.avg)\n",
+    "        \n",
+    "        if step+1 % int(num_batches/4) == 0:\n",
+    "            torch.save(model.state_dict(), 'detr_parameters.pth')\n",
+    "            with open('detr_train_losses_partial', 'wb') as fp:\n",
+    "                pickle.dump(loss_per_batch, fp)\n",
     "        \n",
     "        torch.cuda.empty_cache()\n",
     "        del loss_dict, losses\n",
@@ -1504,12 +1540,12 @@
     }
    ],
    "source": [
-    "device = torch.device('cuda')\n",
-    "model = DETRModel(num_classes=num_classes,num_queries=num_queries)\n",
-    "model = model.to(device)\n",
+    "# device = torch.device('cuda')\n",
+    "# model = DETRModel(num_classes=num_classes,num_queries=num_queries)\n",
+    "# model = model.to(device)\n",
     "\n",
-    "for i in range(5):\n",
-    "    view_sample(test_df, model, device)"
+    "# for i in range(5):\n",
+    "#     view_sample(test_df, model, device)"
    ]
   },
   {
@@ -1525,26 +1561,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset = DrivingDataset(image_ids=test_df.name.values, \n",
-    "                              dataframe=test_df,\n",
-    "                              transforms=get_valid_transforms())\n",
+    "# test_dataset = DrivingDataset(image_ids=test_df.name.values, \n",
+    "#                               dataframe=test_df,\n",
+    "#                               transforms=get_valid_transforms())\n",
     "\n",
-    "test_data_loader = DataLoader(test_dataset, \n",
-    "                               batch_size=64, \n",
-    "                               shuffle=True, #False, \n",
-    "                               #num_workers=4, \n",
-    "                               collate_fn= collate_fn)\n",
+    "# test_data_loader = DataLoader(test_dataset, \n",
+    "#                                batch_size=64, \n",
+    "#                                shuffle=True, #False, \n",
+    "#                                #num_workers=4, \n",
+    "#                                collate_fn= collate_fn)\n",
     "\n",
-    "print('test data loader made')\n",
+    "# print('test data loader made')\n",
     "\n",
     "\n",
-    "device = torch.device('cuda')\n",
-    "model = DETRModel(num_classes=num_classes,num_queries=num_queries)\n",
-    "model = model.to(device)\n",
-    "criterion = SetCriterion(num_classes-1, matcher, weight_dict, eos_coef = null_class_coef, losses=losses) #changed from num_classes-1 to num_classes\n",
-    "criterion = criterion.to(device)\n",
+    "# device = torch.device('cuda')\n",
+    "# model = DETRModel(num_classes=num_classes,num_queries=num_queries)\n",
+    "# model = model.to(device)\n",
+    "# criterion = SetCriterion(num_classes-1, matcher, weight_dict, eos_coef = null_class_coef, losses=losses) #changed from num_classes-1 to num_classes\n",
+    "# criterion = criterion.to(device)\n",
     "\n",
-    "valid_loss = eval_fn(test_data_loader, model,criterion, device)"
+    "# valid_loss = eval_fn(test_data_loader, model,criterion, device)"
    ]
   },
   {
@@ -1561,7 +1597,18 @@
     }
    ],
    "source": [
-    "print(f'Test loss on the pre-trained DETR: {valid_loss.avg}')"
+    "# print(f'Test loss on the pre-trained DETR: {valid_loss.avg}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving Loss value from test set on pre-trained DETR for when the output gets lost ^ \n",
+    "# also the above is commented out for when running the bigger training model later in TMUX to save time\n",
+    "print('Test loss on the pre-trained DETR: 2.7477256315352334')"
    ]
   },
   {
@@ -1651,6 +1698,11 @@
     "train_batch_losses = []\n",
     "for epoch in range(EPOCHS):\n",
     "    train_loss, loss_by_batch = train_fn(train_data_loader, model,criterion, optimizer,device,scheduler=None,epoch=epoch)\n",
+    "    \n",
+    "    torch.save(model.state_dict(), 'detr_parameters.pth')\n",
+    "    with open(f'detr_train_losses_by_batch_{epoch}', 'wb') as fp:\n",
+    "        pickle.dump(loss_by_batch, fp)\n",
+    "    \n",
     "    valid_loss = eval_fn(test_data_loader, model,criterion, device)\n",
     "\n",
     "    print('|EPOCH {}| TRAIN_LOSS {}| VALID_LOSS {}|'.format(epoch+1,train_loss.avg,valid_loss.avg))\n",
@@ -1658,6 +1710,13 @@
     "    train_losses.append(train_loss.avg)\n",
     "    train_batch_losses.append(loss_by_batch)\n",
     "    test_losses.append(valid_loss.avg)\n",
+    "    \n",
+    "    with open('detr_train_losses', 'wb') as fp:\n",
+    "        pickle.dump(train_losses, fp)\n",
+    "    \n",
+    "    with open('detr_test_losses', 'wb') as fp:\n",
+    "        pickle.dump(test_losses, fp)\n",
+    "\n",
     "\n",
     "#         if valid_loss.avg < best_loss:\n",
     "#             best_loss = valid_loss.avg\n",
@@ -1667,77 +1726,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sat Dec 16 00:57:30 2023       \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| NVIDIA-SMI 525.85.12    Driver Version: 525.85.12    CUDA Version: 12.0     |\r\n",
-      "|-------------------------------+----------------------+----------------------+\r\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
-      "|                               |                      |               MIG M. |\r\n",
-      "|===============================+======================+======================|\r\n",
-      "|   0  NVIDIA A10G         On   | 00000000:00:1E.0 Off |                    0 |\r\n",
-      "|  0%   27C    P0    59W / 300W |  22476MiB / 23028MiB |      0%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "                                                                               \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| Processes:                                                                  |\r\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
-      "|        ID   ID                                                   Usage      |\r\n",
-      "|=============================================================================|\r\n",
-      "|    0   N/A  N/A      1853      C   ...untu/anaconda3/bin/python    22474MiB |\r\n",
-      "+-----------------------------------------------------------------------------+\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!nvidia-smi"
+    "# !nvidia-smi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if torch.cuda.device_count() > 1:\n",
-    "    print(\"Using\", torch.cuda.device_count(), \"GPUs!\")\n",
-    "    # Wrap the model with nn.DataParallel\n",
-    "    model = nn.DataParallel(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.cuda.device_count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
+    "# if torch.cuda.device_count() > 1:\n",
+    "#     print(\"Using\", torch.cuda.device_count(), \"GPUs!\")\n",
+    "#     # Wrap the model with nn.DataParallel\n",
+    "#     model = nn.DataParallel(model)\n",
     "\n",
-    "# Check if CUDA (GPU support) is available\n",
-    "if torch.cuda.is_available():\n",
-    "    print(\"CUDA is available. GPUs detected: \", torch.cuda.device_count())\n",
-    "    for i in range(torch.cuda.device_count()):\n",
-    "        print(f\"Device {i}: {torch.cuda.get_device_name(i)}\")\n",
-    "        print(f\"  Total Memory: {torch.cuda.get_device_properties(i).total_memory / 1e9} GB\")\n",
-    "else:\n",
-    "    print(\"CUDA is not available.\")\n"
+    "# torch.cuda.device_count()\n",
+    "\n",
+    "# # Check if CUDA (GPU support) is available\n",
+    "# if torch.cuda.is_available():\n",
+    "#     print(\"CUDA is available. GPUs detected: \", torch.cuda.device_count())\n",
+    "#     for i in range(torch.cuda.device_count()):\n",
+    "#         print(f\"Device {i}: {torch.cuda.get_device_name(i)}\")\n",
+    "#         print(f\"  Total Memory: {torch.cuda.get_device_properties(i).total_memory / 1e9} GB\")\n",
+    "# else:\n",
+    "#     print(\"CUDA is not available.\")\n",
+    "\n",
+    "# print(torch.__version__)\n",
+    "\n",
+    "# print(torch.version.cuda)\n",
+    "\n",
+    "# print(\"cuDNN Version:\", torch.backends.cudnn.version())"
    ]
   },
   {
@@ -1746,42 +1768,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch; print(torch.__version__)"
+    "# torch.cuda.memory_allocated(), torch.cuda.max_memory_allocated(), torch.cuda.memory_reserved(), torch.cuda.max_memory_reserved() "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch; print(torch.version.cuda)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"cuDNN Version:\", torch.backends.cudnn.version())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.cuda.memory_allocated(), torch.cuda.max_memory_allocated(), torch.cuda.memory_reserved(), torch.cuda.max_memory_reserved() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
