class labels fixed

--- a/detr.ipynb
+++ b/detr.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "['a', 'b', 'c', 'd']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
    "source": [
     "n_folds = 5\n",
     "seed = 42\n",
-    "num_classes = 11\n",
+    "num_classes = 7 #11\n",
     "num_queries = 65 #changed from 100\n",
     "null_class_coef = 0.5\n",
     "BATCH_SIZE = 8\n",
@@ -178,33 +178,52 @@
     "EPOCHS = 2\n",
     "device = torch.device('cuda')\n",
     "\n",
+    "# OLD VERSION\n",
+    "# label_to_idx = {'car': 0,\n",
+    "#                'pedestrian': 1,\n",
+    "#                'truck': 2,\n",
+    "#                'bus': 3,\n",
+    "#                'bicycle': 4,\n",
+    "#                'rider': 5,\n",
+    "#                'other vehicle': 6,\n",
+    "#                'motorcycle': 7,\n",
+    "#                'other person': 8,\n",
+    "#                'trailer': 9,\n",
+    "#                'train': 10}\n",
+    "\n",
+    "# idx_to_label = {0: 'car',\n",
+    "#                1: 'pedestrian',\n",
+    "#                2: 'truck',\n",
+    "#                3: 'bus',\n",
+    "#                4: 'bicycle',\n",
+    "#                5: 'rider',\n",
+    "#                6: 'other vehicle',\n",
+    "#                7: 'motorcycle',\n",
+    "#                8: 'other person',\n",
+    "#                9: 'trailer',\n",
+    "#                10: 'train'}\n",
+    "\n",
+    "# NEW VERSION\n",
     "label_to_idx = {'car': 0,\n",
-    "               'pedestrian': 1,\n",
+    "               'person': 1,\n",
     "               'truck': 2,\n",
     "               'bus': 3,\n",
     "               'bicycle': 4,\n",
-    "               'rider': 5,\n",
-    "               'other vehicle': 6,\n",
-    "               'motorcycle': 7,\n",
-    "               'other person': 8,\n",
-    "               'trailer': 9,\n",
-    "               'train': 10}\n",
+    "               'motorcycle': 5,\n",
+    "               'train': 6}\n",
     "\n",
     "idx_to_label = {0: 'car',\n",
-    "               1: 'pedestrian',\n",
+    "               1: 'person',\n",
     "               2: 'truck',\n",
     "               3: 'bus',\n",
     "               4: 'bicycle',\n",
-    "               5: 'rider',\n",
-    "               6: 'other vehicle',\n",
-    "               7: 'motorcycle',\n",
-    "               8: 'other person',\n",
-    "               9: 'trailer',\n",
-    "               10: 'train'}\n",
+    "               5: 'motorcycle',\n",
+    "               6: 'train'}\n",
     "\n",
     "color_map = {\n",
     "    \"car\": (0, 0, 255),\n",
     "    \"truck\": (0, 0, 100),\n",
+    "    \"person\" : (255, 0, 0),\n",
     "    \"pedestrian\": (255, 0, 0),\n",
     "    \"other vehicle\": (0, 0, 150),\n",
     "    \"rider\": (200, 100, 0),\n",
@@ -251,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +456,7 @@
        "4  354.180139   64.018476  46.558891  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,17 +474,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['car', 'pedestrian', 'truck', 'motorcycle', 'rider', 'bicycle',\n",
+       "       'bus', 'other vehicle', 'other person', 'train', 'trailer'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "jpegs = os.listdir('frames_v2')\n",
-    "df_cleaned = df[df['name'].isin(jpegs)].copy()"
+    "df.category.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def relabel(x):\n",
+    "    if x in ['pedestrian', 'rider', 'other person']:\n",
+    "        return 'person'\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jpegs = os.listdir('frames_v2')\n",
+    "df_cleaned = df[df['name'].isin(jpegs)].copy()\n",
+    "df_cleaned = df_cleaned[~df_cleaned['category'].isin(['trailer', 'other vehicle'])]\n",
+    "df_cleaned['category'] = df_cleaned['category'].apply(lambda x: relabel(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['car', 'person', 'truck', 'motorcycle', 'bicycle', 'bus', 'train'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaned.category.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +550,7 @@
        "189580"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +716,7 @@
        "(80, 20)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,8 +743,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -712,140 +790,140 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>20945</th>\n",
-       "      <td>006a7635-c42f9f97-0000002.jpg</td>\n",
-       "      <td>006a7635-c42f9f97</td>\n",
+       "      <th>89752</th>\n",
+       "      <td>003e23ee-67d25f19-0000002.jpg</td>\n",
+       "      <td>003e23ee-67d25f19</td>\n",
        "      <td>1</td>\n",
-       "      <td>60697.0</td>\n",
+       "      <td>106589.0</td>\n",
        "      <td>car</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>490.634731</td>\n",
-       "      <td>714.826347</td>\n",
-       "      <td>347.497006</td>\n",
-       "      <td>525.125749</td>\n",
+       "      <td>204.398952</td>\n",
+       "      <td>660.434731</td>\n",
+       "      <td>196.266663</td>\n",
+       "      <td>518.101687</td>\n",
        "      <td>True</td>\n",
-       "      <td>490.634731</td>\n",
-       "      <td>347.497006</td>\n",
-       "      <td>224.191617</td>\n",
-       "      <td>177.628743</td>\n",
+       "      <td>204.398952</td>\n",
+       "      <td>196.266663</td>\n",
+       "      <td>456.035779</td>\n",
+       "      <td>321.835024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20946</th>\n",
-       "      <td>006a7635-c42f9f97-0000002.jpg</td>\n",
-       "      <td>006a7635-c42f9f97</td>\n",
+       "      <th>89753</th>\n",
+       "      <td>003e23ee-67d25f19-0000002.jpg</td>\n",
+       "      <td>003e23ee-67d25f19</td>\n",
        "      <td>1</td>\n",
-       "      <td>60698.0</td>\n",
+       "      <td>106590.0</td>\n",
        "      <td>car</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>1097.676647</td>\n",
-       "      <td>1279.616766</td>\n",
-       "      <td>323.353293</td>\n",
-       "      <td>538.059880</td>\n",
        "      <td>True</td>\n",
-       "      <td>1097.676647</td>\n",
-       "      <td>323.353293</td>\n",
-       "      <td>181.940120</td>\n",
-       "      <td>214.706587</td>\n",
+       "      <td>654.056608</td>\n",
+       "      <td>1280.000000</td>\n",
+       "      <td>201.599996</td>\n",
+       "      <td>534.046994</td>\n",
+       "      <td>True</td>\n",
+       "      <td>654.056608</td>\n",
+       "      <td>201.599996</td>\n",
+       "      <td>625.943392</td>\n",
+       "      <td>332.446998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20947</th>\n",
-       "      <td>006a7635-c42f9f97-0000002.jpg</td>\n",
-       "      <td>006a7635-c42f9f97</td>\n",
+       "      <th>89754</th>\n",
+       "      <td>003e23ee-67d25f19-0000002.jpg</td>\n",
+       "      <td>003e23ee-67d25f19</td>\n",
        "      <td>1</td>\n",
-       "      <td>60699.0</td>\n",
+       "      <td>106591.0</td>\n",
        "      <td>car</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>945.916168</td>\n",
-       "      <td>1164.934132</td>\n",
-       "      <td>365.604790</td>\n",
-       "      <td>494.083832</td>\n",
        "      <td>True</td>\n",
-       "      <td>945.916168</td>\n",
-       "      <td>365.604790</td>\n",
-       "      <td>219.017964</td>\n",
-       "      <td>128.479042</td>\n",
+       "      <td>1.088867</td>\n",
+       "      <td>60.917954</td>\n",
+       "      <td>278.099695</td>\n",
+       "      <td>387.422167</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.088867</td>\n",
+       "      <td>278.099695</td>\n",
+       "      <td>59.829087</td>\n",
+       "      <td>109.322472</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20948</th>\n",
-       "      <td>006a7635-c42f9f97-0000002.jpg</td>\n",
-       "      <td>006a7635-c42f9f97</td>\n",
+       "      <th>89755</th>\n",
+       "      <td>003e23ee-67d25f19-0000002.jpg</td>\n",
+       "      <td>003e23ee-67d25f19</td>\n",
        "      <td>1</td>\n",
-       "      <td>60700.0</td>\n",
+       "      <td>106592.0</td>\n",
        "      <td>car</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>852.790419</td>\n",
-       "      <td>1005.413174</td>\n",
-       "      <td>350.946108</td>\n",
-       "      <td>453.556886</td>\n",
+       "      <td>35.298719</td>\n",
+       "      <td>85.447009</td>\n",
+       "      <td>285.846067</td>\n",
+       "      <td>359.433232</td>\n",
        "      <td>True</td>\n",
-       "      <td>852.790419</td>\n",
-       "      <td>350.946108</td>\n",
-       "      <td>152.622754</td>\n",
-       "      <td>102.610778</td>\n",
+       "      <td>35.298719</td>\n",
+       "      <td>285.846067</td>\n",
+       "      <td>50.148290</td>\n",
+       "      <td>73.587165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20949</th>\n",
-       "      <td>006a7635-c42f9f97-0000002.jpg</td>\n",
-       "      <td>006a7635-c42f9f97</td>\n",
+       "      <th>89756</th>\n",
+       "      <td>003e23ee-67d25f19-0000002.jpg</td>\n",
+       "      <td>003e23ee-67d25f19</td>\n",
        "      <td>1</td>\n",
-       "      <td>60701.0</td>\n",
+       "      <td>106593.0</td>\n",
        "      <td>car</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>819.161677</td>\n",
-       "      <td>896.766467</td>\n",
-       "      <td>355.257485</td>\n",
-       "      <td>433.724551</td>\n",
+       "      <td>151.767453</td>\n",
+       "      <td>253.360054</td>\n",
+       "      <td>279.583524</td>\n",
+       "      <td>400.711107</td>\n",
        "      <td>True</td>\n",
-       "      <td>819.161677</td>\n",
-       "      <td>355.257485</td>\n",
-       "      <td>77.604790</td>\n",
-       "      <td>78.467066</td>\n",
+       "      <td>151.767453</td>\n",
+       "      <td>279.583524</td>\n",
+       "      <td>101.592601</td>\n",
+       "      <td>121.127583</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                name          videoName  frameIndex       id  \\\n",
-       "20945  006a7635-c42f9f97-0000002.jpg  006a7635-c42f9f97           1  60697.0   \n",
-       "20946  006a7635-c42f9f97-0000002.jpg  006a7635-c42f9f97           1  60698.0   \n",
-       "20947  006a7635-c42f9f97-0000002.jpg  006a7635-c42f9f97           1  60699.0   \n",
-       "20948  006a7635-c42f9f97-0000002.jpg  006a7635-c42f9f97           1  60700.0   \n",
-       "20949  006a7635-c42f9f97-0000002.jpg  006a7635-c42f9f97           1  60701.0   \n",
+       "                                name          videoName  frameIndex        id  \\\n",
+       "89752  003e23ee-67d25f19-0000002.jpg  003e23ee-67d25f19           1  106589.0   \n",
+       "89753  003e23ee-67d25f19-0000002.jpg  003e23ee-67d25f19           1  106590.0   \n",
+       "89754  003e23ee-67d25f19-0000002.jpg  003e23ee-67d25f19           1  106591.0   \n",
+       "89755  003e23ee-67d25f19-0000002.jpg  003e23ee-67d25f19           1  106592.0   \n",
+       "89756  003e23ee-67d25f19-0000002.jpg  003e23ee-67d25f19           1  106593.0   \n",
        "\n",
        "      category attributes.crowd attributes.occluded attributes.truncated  \\\n",
-       "20945      car            False               False                False   \n",
-       "20946      car            False               False                 True   \n",
-       "20947      car            False                True                False   \n",
-       "20948      car            False                True                False   \n",
-       "20949      car            False                True                False   \n",
+       "89752      car            False               False                False   \n",
+       "89753      car            False                True                 True   \n",
+       "89754      car            False               False                 True   \n",
+       "89755      car            False                True                False   \n",
+       "89756      car            False                True                False   \n",
        "\n",
-       "          box2d.x1     box2d.x2    box2d.y1    box2d.y2  haveVideo  \\\n",
-       "20945   490.634731   714.826347  347.497006  525.125749       True   \n",
-       "20946  1097.676647  1279.616766  323.353293  538.059880       True   \n",
-       "20947   945.916168  1164.934132  365.604790  494.083832       True   \n",
-       "20948   852.790419  1005.413174  350.946108  453.556886       True   \n",
-       "20949   819.161677   896.766467  355.257485  433.724551       True   \n",
+       "         box2d.x1     box2d.x2    box2d.y1    box2d.y2  haveVideo           x  \\\n",
+       "89752  204.398952   660.434731  196.266663  518.101687       True  204.398952   \n",
+       "89753  654.056608  1280.000000  201.599996  534.046994       True  654.056608   \n",
+       "89754    1.088867    60.917954  278.099695  387.422167       True    1.088867   \n",
+       "89755   35.298719    85.447009  285.846067  359.433232       True   35.298719   \n",
+       "89756  151.767453   253.360054  279.583524  400.711107       True  151.767453   \n",
        "\n",
-       "                 x           y           w           h  \n",
-       "20945   490.634731  347.497006  224.191617  177.628743  \n",
-       "20946  1097.676647  323.353293  181.940120  214.706587  \n",
-       "20947   945.916168  365.604790  219.017964  128.479042  \n",
-       "20948   852.790419  350.946108  152.622754  102.610778  \n",
-       "20949   819.161677  355.257485   77.604790   78.467066  "
+       "                y           w           h  \n",
+       "89752  196.266663  456.035779  321.835024  \n",
+       "89753  201.599996  625.943392  332.446998  \n",
+       "89754  278.099695   59.829087  109.322472  \n",
+       "89755  285.846067   50.148290   73.587165  \n",
+       "89756  279.583524  101.592601  121.127583  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +976,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -935,13 +1013,23 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df[train_df['category'] == 'other vehicle']['videoName'].unique()\n",
+    "pics = train_df[(train_df['category'] == 'other vehicle')]['name'].unique()[10:25]"
    ]
   },
   {
